--- a/app/src/main/res/layout/activity_life_circle.xml
+++ b/app/src/main/res/layout/activity_life_circle.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.qiaoxg.demoactivity.activity.LifeCircleActivity">
 
     <Button
@@ -14,4 +15,10 @@
         android:text="Goto Other Activity"
         android:textAllCaps="false"/>
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/lifeCircle_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"/>
+
+</LinearLayout>
