--- a/app/src/main/res/layout/activity_show_data.xml
+++ b/app/src/main/res/layout/activity_show_data.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="#F5F5F5"
+        android:background="@color/linearLayout_bg"
         android:orientation="vertical"
         android:padding="5dp">
 
