--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,16 @@
     <style name="MyButtonStyle">
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+    <style name="MyLinearLayoutStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">#F5F5F5</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">5dp</item>
     </style>
 
 </resources>
